--- a/css/bvlgari.css
+++ b/css/bvlgari.css
@@ -21,6 +21,10 @@ header {
     z-index: 1000;
 }
 
+div {
+    margin-bottom: 40px;
+}
+
 .nav-links {
     display: flex;
     justify-content: flex-end;
@@ -47,6 +51,37 @@ header {
     align-items: center;
     text-align: center;
     padding: 0 20px;
+}
+
+.additional-scents {
+    margin: 200px 200px;
+    text-align: left;
+}
+
+.scent-block {
+    justify-content: center;
+    align-items: center;
+}
+
+.cologne {
+    margin-top: 12px;
+    border: solid #000 .67px;
+}
+
+.info-section {
+    margin: 120px 200px 200px;
+}
+
+.review-section {
+    text-align: left;
+    margin: 80px 200px;
+    display: flex;
+    flex-direction: column;
+}
+
+.review-section img {
+    margin-top: 120px;
+    /* Adjust as needed */
 }
 
 .product-image {
@@ -76,6 +111,14 @@ header {
 
 .product-brand {
     font-size: 24px;
+}
+
+button {
+    padding: 10px;
+    color: white;
+    background-color: #000;
+    width: 120px;
+    border-radius: 8px;
 }
 
 @keyframes bounce {
